--- a/src/404.html
+++ b/src/404.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clic.ly - Not Found Page</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/settings/color.css">
+    <link rel="stylesheet" href="css/elements/base.css">
+
+    <link rel="stylesheet" href="css/components/main-logo.css">
+    <link rel="stylesheet" href="css/components/simple-action.css">
+    <link rel="stylesheet" href="css/components/primary-button.css">
+
+    <link rel="stylesheet" href="css/containers/main-header.css">
 </head>
 
 <body>
-    <header>
-        <h1>Clic.ly</h1>
+    <header class="main-header">
+        <h1 class="main-logo">Clic.ly</h1>
+
         <nav>
-            <a href="index.html">Home</a>
-            <a href="">Pricing</a>
-            <a href="">About Us</a>
-            <a href="">Log in</a>
+            <a class="simple-action" href="index.html">Home</a>
+            <a class="simple-action" href="">Pricing</a>
+            <a class="simple-action" href="">About Us</a>
+            <a class="primary-button" href="">Log in</a>
         </nav>
     </header>
+
+    <h1>Seems like we were not ready for that click</h1>
+    <h2>Well, let’s at least play a game?</h2>
 
 </body>
 
