--- a/src/404.html
+++ b/src/404.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clic.ly - Not Found Page</title>
 
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
@@ -12,19 +10,23 @@
 
     <link rel="stylesheet" href="css/settings/color.css">
     <link rel="stylesheet" href="css/settings/gap.css">
+    <link rel="stylesheet" href="css/gerenic/reset.css">
     <link rel="stylesheet" href="css/elements/base.css">
 
     <link rel="stylesheet" href="css/components/main-logo.css">
     <link rel="stylesheet" href="css/components/simple-action.css">
     <link rel="stylesheet" href="css/components/primary-button.css">
+    <link rel="stylesheet" href="css/components/simple-title.css">
+    <link rel="stylesheet" href="css/components/simple-subtitle.css">
 
     <link rel="stylesheet" href="css/containers/main-menu.css">
     <link rel="stylesheet" href="css/containers/main-header.css">
+    <link rel="stylesheet" href="css/containers/main-stage.css">
 </head>
 
 <body>
     <header class="main-header">
-        <h1 class="main-logo">Clic.ly</h1>
+        <h1 class="main-logo">Click.ly</h1>
 
         <nav class="main-menu">
             <a class="simple-action" href="index.html">Home</a>
@@ -34,8 +36,13 @@
         </nav>
     </header>
 
-    <h1>Seems like we were not ready for that click</h1>
-    <h2>Well, let’s at least play a game?</h2>
+    <section class="main-stage">
+        <h2 class="simple-title">Seems like we were not ready for that click</h2>
+        <h3 class="simple-subtitle">Well, let’s at least play a game?</h3>
+
+        <a class="primary-button -dark" href="">Play</a>
+        <a class="simple-action -light" href="">Go Home</a>
+    </section>
 
 </body>
 
